--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-tooltip-background: var(--tooltip-background);
+  --color-charcoal: var(--charcoal);
 }
 
 body {
@@ -79,8 +81,8 @@ body {
 }
 
 .overflow-x-auto {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 :root {
@@ -116,6 +118,7 @@ body {
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --tooltip-background: oklch(0.4 0 0);
 }
 
 .dark {
@@ -150,6 +153,7 @@ body {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --tooltip-background: oklch(0.4 0 0);
 }
 
 @layer base {
