--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --color-tooltip-background: var(--tooltip-background);
-  --color-charcoal: var(--charcoal);
+  --color-transparent-background: var(--transparent-background);
 }
 
 body {
@@ -119,6 +119,7 @@ body {
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --tooltip-background: oklch(0.4 0 0);
+  --transparent-background: oklch(1 0 0 / 10%);
 }
 
 .dark {
@@ -154,6 +155,7 @@ body {
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
   --tooltip-background: oklch(0.4 0 0);
+  --transparent-background: oklch(1 0 0 / 10%);
 }
 
 @layer base {
