--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,7 @@
   --radius-xl: calc(var(--radius) + 4px);
   --color-tooltip-background: var(--tooltip-background);
   --color-transparent-background: var(--transparent-background);
+  --color-transparent-background-hover: var(--transparent-background-hover);
 }
 
 body {
@@ -120,6 +121,7 @@ body {
   --sidebar-ring: oklch(0.708 0 0);
   --tooltip-background: oklch(0.4 0 0);
   --transparent-background: oklch(1 0 0 / 10%);
+  --transparent-background-hover: oklch(1 0 0 / 20%);
 }
 
 .dark {
@@ -156,6 +158,7 @@ body {
   --sidebar-ring: oklch(0.556 0 0);
   --tooltip-background: oklch(0.4 0 0);
   --transparent-background: oklch(1 0 0 / 10%);
+  --transparent-background-hover: oklch(1 0 0 / 20%);
 }
 
 @layer base {
