--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,8 @@
   --radius-xl: calc(var(--radius) + 4px);
   --color-tooltip-background: var(--tooltip-background);
   --color-transparent-background: var(--transparent-background);
-  --color-transparent-background-hover: var(--transparent-background-hover);
+  --color-transparent-button: var(--transparent-button);
+  --color-transparent-button-hover: var(--transparent-button-hover);
 }
 
 body {
@@ -121,7 +122,8 @@ body {
   --sidebar-ring: oklch(0.708 0 0);
   --tooltip-background: oklch(0.4 0 0);
   --transparent-background: oklch(1 0 0 / 10%);
-  --transparent-background-hover: oklch(1 0 0 / 20%);
+  --transparent-button: oklch(1 0 0 / 50%);
+  --transparent-button-hover: oklch(1 0 0 / 70%);
 }
 
 .dark {
@@ -158,7 +160,8 @@ body {
   --sidebar-ring: oklch(0.556 0 0);
   --tooltip-background: oklch(0.4 0 0);
   --transparent-background: oklch(1 0 0 / 10%);
-  --transparent-background-hover: oklch(1 0 0 / 20%);
+  --transparent-button: oklch(1 0 0 / 50%);
+  --transparent-button-hover: oklch(1 0 0 / 70%);
 }
 
 @layer base {
